Manual typography changes

--- a/src/epub/text/conclusion.xhtml
+++ b/src/epub/text/conclusion.xhtml
@@ -17,7 +17,7 @@
 			<p>But the path of self-purification is hard and steep. To attain to perfect purity one has to become absolutely passion-free in thought, speech and action; to rise above the opposing currents of love and hatred, attachment and repulsion. I know that I have not in me as yet that triple purity, in spite of constant ceaseless striving for it. That is why the world’s praise fails to move me, indeed it very often stings me. To conquer the subtle passions seems to me to be harder far than the physical conquest of the world by the force of arms. Ever since my return to India I have had experiences of the dormant passions lying hidden within me. The knowledge of them has made me feel humiliated though not defeated. The experiences and experiments have sustained me and given me great joy. But I know that I have still before me a difficult path to traverse. I must reduce myself to zero. So long as a man does not of his own free will put himself last among his fellow creatures, there is no salvation for him. <i>Ahimsa</i> is the farthest limit of humility.</p>
 			<p>In bidding farewell to the reader, for the time being at any rate, I ask him to join with me in prayer to the God of Truth that He may grant me the boon of <i>Ahitnsa</i> in mind, word and deed.</p>
 			<div>
-				<p id="P14-1">Literally freedom from birth and death. The nearest English equivalent is ‘salvation’.</p>
+				<p id="P14-1">Literally freedom from birth and death. The nearest English equivalent is ‘salvation.’</p>
 			</div>
 			<div>
 				<p id="P20-1">Literally a period of four months. A vow of fasting and semi-fasting during the four months of the rains. The period is a sort of long Lent.</p>
@@ -45,7 +45,7 @@
 			<p id="P93-1">A knowing one, a seer.</p>
 			<p id="P101-1">Throne</p>
 			<div>
-				<p id="P179-1">The famous word in Hindu philosophy which is nearly untranslatable, but has been frequently translated in English as ‘delusion’, ‘illusion’.</p>
+				<p id="P179-1">The famous word in Hindu philosophy which is nearly untranslatable, but has been frequently translated in English as ‘delusion,’ ‘illusion.’</p>
 				<p id="P179-2">The prayer prescribed by the Koran.</p>
 			</div>
 			<div>
@@ -61,7 +61,7 @@
 				<p id="P216-2">i.e. waiters.</p>
 			</div>
 			<div>
-				<p id="P223-1">Regarding the use of the word ‘volatile’, see note ‘In Justice to Her Memory’, <i>Young India</i>, 30 June 1927.</p>
+				<p id="P223-1">Regarding the use of the word ‘volatile,’ see note ‘In Justice to Her Memory,’ <i>Young India</i>, 30 June 1927.</p>
 				<p id="P223-2">Monks.</p>
 			</div>
 			<div>
