[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -25,7 +25,7 @@
 					<p><i xml:lang="gu-Latn">Kansar</i> is a preparation of wheat which the pair partake of together after the completion of the ceremony. <a href="chapter-1-3.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p>Ahimsa means literally not-hurting, non-violence. <a href="chapter-1-7.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>Ahimsa means literally not-hurting, nonviolence. <a href="chapter-1-7.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
 					<p>Brahmacharya means literally conduct that leads one to God. Its technical meaning is self-restraint, particularly mastery over the sexual organ. <a href="chapter-1-7.xhtml#noteref-7" epub:type="backlink">↩</a></p>
@@ -34,7 +34,7 @@
 					<p>Eleventh day of the bright and the dark half of a lunar month. <a href="chapter-1-10.xhtml#noteref-8" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-9" epub:type="endnote">
-					<p>Laws of Manu the Hindu law-giver. They have the sanction of religion. <a href="chapter-1-10.xhtml#noteref-9" epub:type="backlink">↩</a></p>
+					<p>Laws of Manu the Hindu lawgiver. They have the sanction of religion. <a href="chapter-1-10.xhtml#noteref-9" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-10" epub:type="endnote">
 					<p>One who observes brahmacharya, <abbr epub:type="z3998:initialism">i.e.</abbr> complete self-restraint. (See note on <abbr>p.</abbr> 17.) <a href="chapter-1-19.xhtml#noteref-10" epub:type="backlink">↩</a></p>
