[Editorial] Bhagavadgita -> Bhagavad Gita

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -58,7 +58,7 @@
 					<p>The prayer prescribed by the Koran. <a href="chapter-3-1.xhtml#noteref-16" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-17" epub:type="endnote">
-					<p>The Bhagavadgita, 2‒59. <a href="chapter-3-8.xhtml#noteref-17" epub:type="backlink">↩</a></p>
+					<p>The Bhagavad Gita, 2‒59. <a href="chapter-3-8.xhtml#noteref-17" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-18" epub:type="endnote">
 					<p>Duties of the four fundamental divisions of Hindu Society. <a href="chapter-3-13.xhtml#noteref-18" epub:type="backlink">↩</a></p>
