--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -40,7 +40,7 @@
 					<p>One who observes brahmacharya, <abbr epub:type="z3998:initialism">i.e.</abbr> complete self-restraint. (See note on <abbr>p.</abbr> 17.) <a href="chapter-1-19.xhtml#noteref-10" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-11" epub:type="endnote">
-					<p>“<i xml:lang="hi-Latn">Nirbal ke bala Ram</i>”⁠—Refrain of Surdas’ famous hymn, “He is the help of the helpless, the strength of the weak.” <a href="chapter-1-21.xhtml#noteref-11" epub:type="backlink">↩</a></p>
+					<p>“<i xml:lang="hi-Latn">Nirbal ke bala Rama</i>”⁠—Refrain of Surdas’ famous hymn, “He is the help of the helpless, the strength of the weak.” <a href="chapter-1-21.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
 					<p>An Indian pulse. <a href="chapter-1-22.xhtml#noteref-12" epub:type="backlink">↩</a></p>
