[Editorial] Co-Workers -> Coworkers

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -401,7 +401,7 @@
 							<a href="text/chapter-4-45.xhtml"><span epub:type="z3998:roman">XLV</span>: Sharp Practice?</a>
 						</li>
 						<li>
-							<a href="text/chapter-4-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: Clients Turned Co-Workers</a>
+							<a href="text/chapter-4-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: Clients Turned Coworkers</a>
 						</li>
 						<li>
 							<a href="text/chapter-4-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: How a Client Was Saved</a>
