Add links to text in endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -37,7 +37,7 @@
 					<p>Laws of Manu the Hindu lawgiver. They have the sanction of religion. <a href="chapter-1-10.xhtml#noteref-9" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-10" epub:type="endnote">
-					<p>One who observes brahmacharya, <abbr epub:type="z3998:initialism">i.e.</abbr> complete self-restraint. (See note on <abbr>p.</abbr> 17.) <a href="chapter-1-19.xhtml#noteref-10" epub:type="backlink">↩</a></p>
+					<p>One who observes brahmacharya, <abbr epub:type="z3998:initialism">i.e.</abbr> complete self-restraint. (See <a href="#note-7">note 7</a>.) <a href="chapter-1-19.xhtml#noteref-10" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-11" epub:type="endnote">
 					<p>“<i xml:lang="hi-Latn">Nirbal ke bala Rama</i>”⁠—Refrain of Surdas’ famous hymn, “He is the help of the helpless, the strength of the weak.” <a href="chapter-1-21.xhtml#noteref-11" epub:type="backlink">↩</a></p>
@@ -64,7 +64,7 @@
 					<p>Duties of the four fundamental divisions of Hindu Society. <a href="chapter-3-13.xhtml#noteref-18" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-19" epub:type="endnote">
-					<p>See <a>Chapter 13</a>, third paragraph. <a href="chapter-3-15.xhtml#noteref-19" epub:type="backlink">↩</a></p>
+					<p>See third paragraph of <a href="chapter-3-13.xhtml#chapter-3-13-p-3">Chapter 13</a>. <a href="chapter-3-15.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
 					<p><abbr epub:type="z3998:initialism">i.e.</abbr> waiters. <a href="chapter-3-16.xhtml#noteref-20" epub:type="backlink">↩</a></p>
