--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">An Autobiography or the Story of My Experiments with Truth</i><br/>
+			<p><i epub:type="se:name.publication.book">The Story of My Experiments with Truth</i><br/>
 			was published in YEAR by<br/>
 			<a href="https://en.wikipedia.org/wiki/Mahatma_Gandhi">Mahatma Gandhi</a>.<br/>
 			It was translated from ORIGINAL_LANGUAGE in TRANSLATION_YEAR by<br/>
@@ -37,7 +37,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 1, 1900, 12:00 <abbr class="eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/mahatma-gandhi/an-autobiography-or-the-story-of-my-experiments-with-truth/mahadev-desai">standardebooks.org/ebooks/mahatma-gandhi/an-autobiography-or-the-story-of-my-experiments-with-truth/mahadev-desai</a>.</p>
+			<a href="https://standardebooks.org/ebooks/mahatma-gandhi/the-story-of-my-experiments-with-truth/mahadev-desai">standardebooks.org/ebooks/mahatma-gandhi/the-story-of-my-experiments-with-truth/mahadev-desai</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
