--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/introduction.xhtml">Introduction</a>
 				</li>
 				<li>
-					<a href="text/halftitlepage.xhtml">An Autobiography or the Story of My Experiments with Truth</a>
+					<a href="text/halftitlepage.xhtml">The Story of My Experiments with Truth</a>
 					<ol>
 						<li>
 							<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span></a>
@@ -565,7 +565,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/part-1.xhtml" epub:type="bodymatter">An Autobiography or the Story of My Experiments with Truth</a>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">The Story of My Experiments with Truth</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
