--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<h1 epub:type="title">An Autobiography or the Story of My Experiments with Truth</h1>
+			<h1 epub:type="title">The Story of My Experiments with Truth</h1>
 			<p>By <b epub:type="z3998:author z3998:personal-name">Mahatma Gandhi</b>.</p>
 			<p>Translated by <b epub:type="z3998:translator z3998:personal-name">Mahadev Desai</b>.</p>
 			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
