--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -70,7 +70,7 @@
 					<p><abbr epub:type="z3998:initialism">i.e.</abbr> waiters. <a href="chapter-3-16.xhtml#noteref-20" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-21" epub:type="endnote">
-					<p>Regarding the use of the word “volatile,” see note “In Justice to Her Memory,” <i epub:type="se:name.publication.journal">Young India</i>, 30 June 1927. <a href="chapter-3-19.xhtml#noteref-21" epub:type="backlink">↩</a></p>
+					<p>Regarding the use of the word “volatile,” see note “In Justice to Her Memory,” <i epub:type="se:name.publication.journal">Young India</i>, 30th June, 1927. <a href="chapter-3-19.xhtml#noteref-21" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-22" epub:type="endnote">
 					<p>Monks. <a href="chapter-3-19.xhtml#noteref-22" epub:type="backlink">↩</a></p>
