Fix title of 4-13

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -305,7 +305,7 @@
 									<a href="text/chapter-4-12.xhtml"><span epub:type="z3998:roman">XII</span>: European Contacts (Continued)</a>
 								</li>
 								<li>
-									<a href="text/chapter-4-13.xhtml"><span epub:type="z3998:roman">XIII</span>: “Indian Opinion”</a>
+									<a href="text/chapter-4-13.xhtml"><span epub:type="z3998:roman">XIII</span>: <i epub:type="se:name.publication.newspaper">Indian Opinion</i></a>
 								</li>
 								<li>
 									<a href="text/chapter-4-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Coolie Locations or Ghettoes?</a>
