--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -427,7 +427,7 @@
 									<a href="text/chapter-5-4.xhtml"><span epub:type="z3998:roman">IV</span>: Shantiniketan</a>
 								</li>
 								<li>
-									<a href="text/chapter-5-5.xhtml"><span epub:type="z3998:roman">V</span>: Woes of Third Class Passengers</a>
+									<a href="text/chapter-5-5.xhtml"><span epub:type="z3998:roman">V</span>: Woes of Third-Class Passengers</a>
 								</li>
 								<li>
 									<a href="text/chapter-5-6.xhtml"><span epub:type="z3998:roman">VI</span>: Wooing</a>
