--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,9 +23,9 @@
 			and is based on digital scans from<br/>
 			<a href="https://standardebooks.org/ebooks/mahatma-gandhi/the-story-of-my-experiments-with-truth#page-scans">various sources</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Oodeypore</i>,<br/>
+			a painting completed circa 1861 by<br/>
+			<a href="https://en.wikipedia.org/wiki/William_Simpson_(Scottish_artist)">William Simpson</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
