--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,6 +14,9 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
+					<a href="text/translator-note.xhtml">Translator’s Preface</a>
+				</li>
+				<li>
 					<a href="text/introduction.xhtml">Introduction</a>
 				</li>
 				<li>
