--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -67,7 +67,7 @@
 					<p>See third paragraph of <a href="chapter-3-13.xhtml#chapter-3-13-p-3">Chapter 13</a>. <a href="chapter-3-15.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
-					<p><abbr epub:type="z3998:initialism">i.e.</abbr> waiters. <a href="chapter-3-16.xhtml#noteref-20" epub:type="backlink">↩</a></p>
+					<p><abbr epub:type="z3998:initialism">I.e.</abbr> waiters. <a href="chapter-3-16.xhtml#noteref-20" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-21" epub:type="endnote">
 					<p>Regarding the use of the word “volatile,” see note “In Justice to Her Memory,” <i epub:type="se:name.publication.journal">Young India</i>, 30th June, 1927. <a href="chapter-3-19.xhtml#noteref-21" epub:type="backlink">↩</a></p>
